@navikt/core/css/src/inline-message.css
.aksel-inline-message {
  display: flex;
  gap: var(--ax-space-8);
  color: var(--ax-text-default);
}

.aksel-inline-message__icon {
  color: var(--ax-text-subtle);
  font-size: 1.5rem;
  flex: 0 0 auto;
  margin-block-start: var(--ax-space-2);

  .aksel-inline-message[data-size="small"] & {
    font-size: 1.25rem;
  }
}

